--- a/style/index.css
+++ b/style/index.css
@@ -61,6 +61,128 @@ header nav ul li a:hover {
   transition: 0.3s;
 }
 
+.cat * {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+.cat, .head, .ears, .eyes, .muzzle, .body, .paw, .tail, .tail-segment {position: relative;}
+.head, .body, .paw, .tail-segment {background-color: #000000;}
+.left {float: left;}
+.right {float: right;}
+.cat {
+  margin-top: 50px;
+  margin-bottom: -95px;
+  z-index: 10;
+  position: relative;
+}
+.head {
+  width: 100px;
+  height: 90px;
+  border-radius: 50%;
+  z-index: 10;
+  animation: head-bob 10s infinite ease-in-out;
+}
+.ears {
+  top: -20px;
+  z-index: 5;
+}
+.ear {
+  width: 0;
+  height: 0;
+  border-left: 25px solid transparent;
+  border-right: 25px solid transparent;
+  border-bottom: 50px solid #000000;
+}
+.ear.left {
+  transform: rotate(-20deg) translateX(-10px);
+}
+.ear.right {
+  transform: rotate(20deg) translateX(10px);
+}
+.eyes {
+  top: -18px;
+  width: 60%;
+}
+.eye {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background-color: #FFD700;
+  animation: eye-blink 5s infinite;
+  text-align: center;
+}
+
+.muzzle {
+  top: 50px;
+}
+.nose {
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid #666666;
+}
+.body {
+  width: 200px;
+  height: 120px;
+  border-top-left-radius: 200px;
+  border-top-right-radius: 200px;
+  top: -75px;
+  left: 90px;
+  z-index: 1;
+}
+.paw {
+  height: 30px;
+  width: 50px;
+  border-radius: 25px;
+  left: -100px;
+  top: 90px;
+}
+.tail {
+  left: 180px;
+  top: -100px;
+  transform: rotate(90deg);
+  
+}
+
+.tail-segment {
+  height: 20px;
+  width: 30px;
+  border-radius: 25px;
+  top: 0px;
+  left: 10px;
+  animation: tail-swish 5s infinite cubic-bezier(.8,0,.2,1);
+}
+
+@keyframes tail-swish {
+  0% {transform: rotate(12deg);}
+  10% {transform: rotate(12deg);}
+  40% {transform: rotate(-5deg);}
+  50% {transform: rotate(5deg);}
+  60% {transform: rotate(-5deg);}
+  100% {transform: rotate(12deg);}
+}
+
+@keyframes head-bob {
+  0% {transform: translateX(-15px) translateY(45px);}
+  80% {transform: translateX(-15px) translateY(45px);}
+  85% {transform: translateX(0) translateY(0);}
+  95% {transform: translateX(0) translateY(0);}
+  100% {transform: translateX(-15px) translateY(45px);}
+}
+
+@keyframes eye-blink {
+  0% {transform: scaleY(1);}
+  13% {transform: scaleY(1);}
+  15% {transform: scaleY(0);}
+  17% {transform: scaleY(1);}
+  50% {transform: scaleY(1);}
+  90% {transform: scaleY(1);}
+  95% {transform: scaleY(0);} 
+  100% {transform: scaleY(1);}  
+}
+
 .introduction {
   width: auto;
   min-height: 150px;
@@ -88,7 +210,6 @@ header nav ul li a:hover {
   to { width: 100% }
 }
 
-/* The typewriter cursor effect */
 @keyframes blink-caret {
   from, to { border-color: transparent }
   50% { border-color: #0B0B0A; }
@@ -99,15 +220,15 @@ header nav ul li a:hover {
   margin-bottom: 50px;
   width: 800px;
   display: flex;
-  gap: 50px; /* Espace entre les deux sections */
+  gap: 50px;
   align-items: center;
 }
 
 .presentation {
-  flex: 1; /* Prend l'espace disponible */
+  flex: 1;
   min-height: 300px;
   border-radius: 6px;
-  background-color: #0B0B0A; /* Rectangle noir */
+  background-color: #0B0B0A;
   padding: 40px;
   position: relative;
   z-index: 1;
@@ -125,13 +246,13 @@ header nav ul li a:hover {
 }
 
 .logo-3d {
-  flex: 0 0 300px; /* Largeur fixe de 300px */
+  flex: 0 0 300px;
   height: 250px;
   display: flex;
   justify-content: center;
   align-items: center;
   perspective: 1000px;
-  background: transparent; /* Fond transparent */
+  background: transparent;
 }
 
 .spinning-disk {
@@ -209,7 +330,6 @@ header nav ul li a:hover {
   background-color: #9B8BBD !important;
 }
 
-/* Hover pour les octogones pairs (even) */
 .mosaic div:nth-child(even):hover {
   background-color: #705D99 !important;
 }
@@ -232,7 +352,6 @@ header nav ul li a:hover {
   margin-top: 10px;
 }
 
-/* Modal styles */
 .modal {
   display: none;
   position: fixed;
@@ -258,8 +377,8 @@ header nav ul li a:hover {
 .modal-content img {
   display: block;
   margin: 20px auto;
-  width: 200px;  /* Largeur fixe */
-  height: auto;  /* La hauteur s'ajuste automatiquement */
+  width: 200px;
+  height: auto;
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
@@ -298,7 +417,6 @@ header nav ul li a:hover {
   color: #9B8BBD;
 }
 
-/* Pattes de chat qui marchent */
 .paw-trail {
   width: 100%;
   height: 120px;
@@ -316,7 +434,6 @@ header nav ul li a:hover {
   opacity: 0;
 }
 
-/* Position fixe pour chaque patte le long de l'écran */
 .paw-print:nth-child(1) { 
   left: 5%;
   top: 30px;
@@ -397,7 +514,6 @@ header nav ul li a:hover {
   animation-delay: 2.7s;
 }
 
-/* Animation d'apparition et disparition sur place */
 @keyframes pawFade {
   0% {
     opacity: 0;
@@ -417,7 +533,6 @@ header nav ul li a:hover {
   }
 }
 
-/* Pour les pattes droites, on ajuste la rotation dans l'animation */
 .paw-print:nth-child(even) {
   animation-name: pawFadeRight;
 }
@@ -467,7 +582,7 @@ footer nav h1 {
 
 .contact-item {
   display: flex;
-  align-items: center; /* Changé de "left" à "center" */
+  align-items: center;
   margin-bottom: 5px;
   font-size: 1rem;
   color: #9B8BBD;
@@ -479,12 +594,12 @@ footer nav h1 {
 }
 
 .contact-item a {
-  text-decoration: none; /* Ajoute cette règle pour les liens */
+  text-decoration: none;
   color: #9B8BBD;
 }
 
 .contact-item a:hover {
-  color: #DBD0F0; /* Effet hover pour les liens */
+  color: #DBD0F0;
 }
 
 .contact-icon {
